added debugging config for default bootRun task, so it will listen on port 5005
also added some minimal memory config