@@ -136,6 +136,14 @@ clean {
 
 bootRun {
 
-    jvmArgs('-Dspring.output.ansi.enabled=always', '-Dgrails.reload.enabled=true')
+        //'-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005',
+    jvmArgs(
+        '-server',
+        '-Xmx768M',
+        '-XX:MaxPermSize=256m',
+        '-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005',
+        '-Dspring.output.ansi.enabled=always', 
+        '-Dgrails.reload.enabled=true'
+    )
     addResources = true
 }
